Stanford page redirect

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                         <div class="img-container">
                             <img src="img/stanford.PNG">
                         </div>
-                        <div class="project-description"><a href="projects/stanfordClone/index.html" target="_blank">Stanford Clone</a>
+                        <div class="project-description"><a href="https://sanni-anjola.github.io/standfordClone/" target="_blank">Stanford Clone</a>
                         </div>
                     </div>
                     <div class="project">
                         <div class="img-container">
-                            <img src="img/product.png">
+                            <img src="img/product.PNG">
                         </div>
                         <div class="project-description"><a href="projects/product/index.html" target="_blank">Product
                         </div>
